# python-taningia

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile  Makefile.am  iksbind.py  main.py  overrides.py  scanner.py  tags.py
